// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expandable renders correctly, collapsed 1`] = `
<details
  data-testid="expandable-details"
>
  <summary
    class="expandable__title 
            false
            
            "
    data-testid="expandable-summary"
  >
    <h3
      class="expandable__heading 
            false"
    >
      <span>
        Hello
      </span>
    </h3>
  </summary>
  <div
    class="expandable__content
            false
            no-print"
    hidden=""
  >
    Content
  </div>
</details>
`;

exports[`Expandable renders correctly, expanded 1`] = `
<details
  data-testid="expandable-details"
  open=""
>
  <summary
    class="expandable__title 
            false
            
            "
    data-testid="expandable-summary"
  >
    <h3
      class="expandable__heading 
            false"
    >
      <span>
        Hello
      </span>
    </h3>
  </summary>
  <div
    class="expandable__content
            false
            "
  >
    Content
  </div>
</details>
`;
